Fixed logout button and z-index problem

--- a/Progetto/styles/base.css
+++ b/Progetto/styles/base.css
@@ -17,6 +17,7 @@ header {
     display: flex;
     align-items: center;
     justify-content:space-between;
+    z-index: 2;
 }
 
 header>img.logo {
@@ -93,7 +94,7 @@ nav {
     background-color: #333;
     width: 100%;
     height: 40px;
-    z-index: -1;
+    z-index: 1;
 }
 
 nav>a.nav-item {
@@ -115,7 +116,7 @@ nav>a.nav-item.active {
     margin: 30px 20px;
     margin-top: 150px;
     flex-grow: 1;
-    z-index: -2;
+    z-index: 0;
 }
 
 .image-grid {
@@ -202,6 +203,7 @@ footer {
     backdrop-filter: blur(20px);
     justify-content: center;
     align-items: center;
+    z-index: 999;
 }
 
 .error
